<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fnp.appraisetool.LandDevAppr_Fragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/title_margin"
        android:text="@string/land_dev_appr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="vertical">
                
		<LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="3"
                android:text="@string/location" />
            <Spinner android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/location_entry"/>
        </LinearLayout>
		
		<LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/block_margin">
	        <TextView android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:text="@string/building_param"/>
	        
	        <Button android:layout_width="0dp"
	            android:layout_height="@dimen/button_height"
	            android:layout_weight="1"
	            android:textColor="@android:color/holo_orange_dark"
	            android:text="@string/update"
	            style="?android:attr/borderlessButtonStyle"
	            android:padding="0dp" />
        </LinearLayout>
        
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/divider_margin"
            android:layout_marginBottom="@dimen/divider_margin"/>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="2009.7" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="92.44"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="2014.10" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="101.4"/>
        </LinearLayout>
        
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="@dimen/block_margin"
            android:text="@string/basic_param"/>
        
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/divider_margin"
            android:layout_marginBottom="@dimen/divider_margin"/>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/elec_equipment" />
            <EditText android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"/>
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/floor" />
            <EditText android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"/>
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/floor_area_rate" />
            <EditText android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"/>
        </LinearLayout>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/building_price" />
            <EditText android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"/>
        </LinearLayout>
        
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/block_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_city_renew"/>
        
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/divider_margin"
            android:layout_marginBottom="@dimen/divider_margin"/>
        
		<LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/floor_area_rate_bonus" />
            <EditText android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"/>
        </LinearLayout>
        
		<TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/block_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/result"/>
        
        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding"
            android:paddingBottom="@dimen/text_padding">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/building_fee" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>
		<LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding"
            android:paddingBottom="@dimen/text_padding">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/land_price" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/text_padding"
            android:paddingBottom="@dimen/text_padding">
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/int_land_price" />
            <TextView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
</ScrollView>

